# 3x-ui_bot

./: .env.example  .gitignore  LICENSE  README.md  config.py  db.sql  main.py  pyproject.toml
database/: base.py  crud.py  models.py
schemas/: clients.py  inbounds.py  settings.py  vless.py
service/: handlers.py  threex_ui_client.py  vless_service.py
