[project]
name = "3x-ui-bot"
version = "0.2.0"
description = "Telegram bot for 3x-UI panel management"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "loguru>=0.7.3,<0.8.0",
    "pydantic>=2.12.5,<3.0.0",
    "httpx>=0.28.1,<0.29.0",
    "aiogram>=3.24.0,<4.0.0",
    "sqlalchemy>=2.0.46,<3.0.0",
    "aiosqlite>=0.22.1,<0.23.0",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
